--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
@@ -66,6 +68,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.1",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.0"
   }
 }
