--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,7 @@
     {
       "label": "Start Frontend",
       "type": "shell",
-      "command": "npm start",
+      "command": "npm run dev",
       "options": {
         "cwd": "${workspaceFolder}"
       },
